test/negative/rust_cargo_structured_conflict/compile.hxml
-cp .
-lib reflaxe.rust
-D reflaxe_rust_profile=portable
-D rust_codegen_only
-main Main
